# Grid

./: CMakeLists.txt  Functions.cpp  Functions.h  InputOutput.cpp  InputOutput.h  README.md  README.txt  main.cpp  notes.txt  testOutput.txt
Class/: Grid.cpp  Grid.h  PartialSolution temp.cpp  PartialSolution.cpp  PartialSolution.h
Functions/: Compute.cpp  Compute.h  InputOutput.cpp  InputOutput.h
Solutions compétition/: competition_01.txt  competition_02.txt  competition_03.txt  competition_04.txt  competition_05.txt  competition_06.txt  competition_07.txt  competition_08.txt  competition_09.txt  competition_10.txt  competition_11.txt  competition_12.txt  competition_13.txt  competition_14.txt  competition_15.txt
test_grids/: grid_exemple.txt  probleme_16_a.txt  probleme_8_d.txt  probleme_8_e.txt  solve_exemple.txt  worst_grid.txt
